# kyomu

./: .gitignore  COMMIT_NAMING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
src/app/: mod.rs  pastas.rs
src/app/mods/: mod.rs  snake.rs  standard.rs
src/app/scenarios/: game.rs  mod.rs  settings.rs
src/app/scenes/: mod.rs  welcome.rs
src/app/settings/: mod.rs
src/app/terminal/: config.rs  event.rs  key.rs  mod.rs
src/core/: macros.rs  math.rs  mod.rs  random.rs  terminal.rs
src/core/cell/: color.rs  mod.rs
src/core/cursor/: mod.rs
src/core/event/: mod.rs
src/core/event/key/: key_char.rs  mod.rs  modifier.rs
src/core/geom/: align.rs  mod.rs  stretch.rs
src/core/io/: ansi.rs  ansidef.rs  input.rs  mod.rs  out.rs  out_flags.rs  styled.rs  text_decor.rs
src/core/io/ansi/: ansiable.rs  def.rs  global.rs  mod.rs  sequence.rs
src/core/io2/: mod.rs  styled.rs  terminal.rs
src/core/math/: mod.rs  operations.rs
src/core/surface/: mod.rs
src/core/terminal/: mod.rs
src/core/ui/: cell.rs  mod.rs  raw_ansi.rs  render_flags.rs  render_utils.rs
src/core/ui/components/: input.rs  mod.rs  select.rs  text.rs
src/game/: mod.rs  pastas.rs
src/game/mods/: mod.rs  standard.rs
src/game/scenaries/: game.rs  game_prepare.rs  mod.rs
src/game/settings/: mod.rs
src/rt/: mod.rs
src/rt/config/: flags.rs  mod.rs
