[package]
name = "kyomu"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
eval = "0.4.3"
rand = "0.8.5"
redb = "2.0.0"
dialoguer = "0.11.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = { version = "1.0"}
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "io-std"] }
