[package]
name = "kyomu"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
dialoguer = "0.11.0"
eval = "0.4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = { version = "1.0"}
futures = {version = "0.3.21"}

[dependencies.crossterm]
version = "0.28.0"
features = ["event-stream"]

[dependencies.tokio]
version = "1.40.0"
features = ["macros", "io-std", "time", "sync", "rt-multi-thread", "process"]
