[package]
edition = "2021"
name = "kyomu"
version = "0.1.0"

[dependencies]
async-trait = "0.1.82"
bitflags = "2.6.0"
dialoguer = "0.11.0"
eval = "0.4.0"
futures = {version = "0.3.21"}
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}

[dependencies.crossterm]
features = ["event-stream"]
version = "0.28.0"

[dependencies.tokio]
features = ["macros", "io-std", "io-util", "time", "sync", "rt-multi-thread", "process"]
version = "1.40.0"
